@@ -40,6 +40,7 @@
 * The chat splitter will now work properly with unicode characters (Issue 96)
 * Allow Cayenne to manage the database schema in favor of flat files
 * Added option to display / commands in chat
+* Moved tasks to the GuiDesktop
 
 2.0.6 (r1400) 2008-04-21:
 * Added auto-rejoin afer being kicked (Issue 52)
